// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/DefaultStep > renders correctly - active step 1`] = `
<div
  class="perseid-form__step perseid-form__step--initial--[object Object]--active"
  id="root__0"
>
  <div
    class="perseid-form__step__fields"
  >
    <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
    
    <pre
      name="currentField"
      required="false"
    >
          {
  "path": "root.0.test",
  "type": "string",
  "status": "initial",
  "error": null,
  "isActive": false,
  "activeStep": "root.0",
  "value": null,
  "field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  
    </pre>
    
  </div>
</div>
`;

exports[`vue/DefaultStep > renders correctly - inactive step 1`] = `
<div
  class="perseid-form__step perseid-form__step--initial--[object Object]"
  id="root__0"
>
  <div
    class="perseid-form__step__fields"
  >
    <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
    
    <pre
      name="currentField"
      required="false"
    >
          {
  "path": "root.0.test",
  "type": "string",
  "status": "initial",
  "error": null,
  "isActive": false,
  "activeStep": "root.1",
  "value": null,
  "field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  
    </pre>
    
  </div>
</div>
`;
